--- a/app/src/main/res/layout/bread.xml
+++ b/app/src/main/res/layout/bread.xml
@@ -24,15 +24,14 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="297dp"
-        android:layout_height="86dp"
+        android:layout_width="287dp"
+        android:layout_height="136dp"
         android:text="You can buy:1kg at a time if you want to select more press button multiple times"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.539" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -44,7 +43,7 @@
         android:background="@drawable/image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/banana" />
+        app:srcCompat="@drawable/bread" />
 
     <TextView
         android:id="@+id/textView3"
@@ -52,13 +51,15 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="268dp"
         android:layout_marginBottom="5dp"
-        android:text="Banana"
+        android:text="Bread"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="#FF5722"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.527"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.642" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
