--- a/app/src/main/res/layout/cart_list.xml
+++ b/app/src/main/res/layout/cart_list.xml
@@ -11,7 +11,8 @@
         <TextView
             android:id="@+id/txt"
             android:layout_width="wrap_content"
-            android:layout_height="100dp" />
+            android:layout_height="100dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
 
     </TableRow>
