--- a/app/src/main/res/layout/mutton.xml
+++ b/app/src/main/res/layout/mutton.xml
@@ -24,15 +24,15 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="297dp"
-        android:layout_height="86dp"
+        android:layout_width="305dp"
+        android:layout_height="104dp"
         android:text="You can buy:1kg at a time if you want to select more press button multiple times"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.537"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.539" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -44,7 +44,7 @@
         android:background="@drawable/image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/banana" />
+        app:srcCompat="@drawable/mutton" />
 
     <TextView
         android:id="@+id/textView3"
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="268dp"
         android:layout_marginBottom="5dp"
-        android:text="Banana"
+        android:text="Mutton"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="#FF5722"
         android:textSize="30sp"
