--- a/app/src/main/res/layout/rusk.xml
+++ b/app/src/main/res/layout/rusk.xml
@@ -24,41 +24,41 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="297dp"
-        android:layout_height="86dp"
+        android:layout_width="291dp"
+        android:layout_height="94dp"
+        android:layout_marginBottom="313dp"
         android:text="You can buy:1kg at a time if you want to select more press button multiple times"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.539" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="165dp"
-        android:layout_height="144dp"
-        android:layout_marginTop="96dp"
-        android:layout_marginEnd="116dp"
+        android:layout_width="157dp"
+        android:layout_height="145dp"
+        android:layout_marginTop="108dp"
+        android:layout_marginEnd="124dp"
 
         android:background="@drawable/image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/banana" />
+        app:srcCompat="@drawable/rusk" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="268dp"
-        android:layout_marginBottom="5dp"
-        android:text="Banana"
+        android:text="Rusk"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="#FF5722"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.398" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
