--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="Brown">#A52A2A</color>
+    <color name="SaddleBrown">#8B4513</color>
+    <color name="lightbrown">#cf8000</color>
 
 </resources>
